// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleComponent > defaults matches snapshot 1`] = `
<div>
  <div
    class="toggleSwitch"
  >
    <button
      class="left active"
      type="button"
    >
      leftLabel
    </button>
    <label
      class="switch"
      for="toggleSwitch"
    >
      <input
        id="toggleSwitch"
        type="checkbox"
      />
      <span
        class="slider"
      />
    </label>
    <button
      class="right"
      type="button"
    >
      rightLabel
    </button>
  </div>
</div>
`;

exports[`toggleComponent > toggleSwitch active matches snapshot 1`] = `
<div>
  <div
    class="toggleSwitch"
  >
    <button
      class="left"
      type="button"
    >
      leftLabel
    </button>
    <label
      class="switch"
      for="toggleSwitch"
    >
      <input
        checked=""
        id="toggleSwitch"
        type="checkbox"
      />
      <span
        class="slider"
      />
    </label>
    <button
      class="right active"
      type="button"
    >
      rightLabel
    </button>
  </div>
</div>
`;
